# mensagen-de-texto-web

./: .gitignore  Codico nao completo por enquanto 1  LICENSE  O ultimo codico nota dimidinuido  README.md  Segundo codico nao pronto  ia.py  instalar.bat  instalar.sh  minhas_ideias.json.exemplo  pyproject.toml  requirements.txt  transformador_cli.py  transformador_de_ideias.py  transformadores.py  transformadores_criativos.py
transformador/: instalar.bat  pyproject.toml  transformadores_extra.py  transformadores_extra2.py
